--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- animaciones -->
+    <!-- animaciones  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- icono del sitio -->
@@ -37,12 +37,6 @@
     <!-- Style -->
     <link rel="stylesheet" href="../css/main.css" />
 
-    <!-- Animaciones -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-
     <!-- js -->
     <script defer src="../js/menu-hamburgesa.js"></script>
 
@@ -59,7 +53,7 @@
           />
         </div>
 
-        <!-- menu bamburguesa -->
+        <!-- menu hamburguesa -->
         <div class="hamburger">
           <div class="_layer -top"></div>
           <div class="_layer -mid"></div>
@@ -90,8 +84,8 @@
 
       <!-- Titulo -->
       <div class="texto-header">
-        <h1 data-aos="zoom-in">HABITACIONES</h1>
-        <p data-aos="zoom-in">
+        <h1>HABITACIONES</h1>
+        <p>
           Conocé nuestras habitaciones y elegí la que más te guste <br />
           para disfrutar de una estadía única.
         </p>
@@ -100,21 +94,21 @@
 
     <!-- principal -->
     <main>
-      <div class="titulo-habitaciones">
-        <h2 data-aos="zoom-in-down">
+      <div class="titulo-habitaciones" data-aos="fade-down">
+        <h2>
           Podes elegir entre tres opciones, <br />
           con temacias locales
         </h2>
       </div>
-      <div class="parrafo-habitaciones">
-        <p data-aos="zoom-in-down">
+      <div class="parrafo-habitaciones" data-aos="fade-up">
+        <p>
           Todas las habitaciones cuentan con baño privado, aire acondicionado y
           Wi-Fi
         </p>
       </div>
       <!-- Yetapa -->
-      <div class="container py-5">
-        <div class="row align-items-center" data-aos="fade-right">
+      <div class="container py-5" data-aos="fade-right">
+        <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
           <div class="col-md-8">
             <div class="row g-3">
@@ -187,8 +181,8 @@
       </div>
 
       <!-- Martin pescador -->
-      <div class="container py-5">
-        <div class="row align-items-center"  data-aos="fade-left">
+      <div class="container py-5" data-aos="fade-up">
+        <div class="row align-items-center">
           <!-- Columna izquierda (Texto) -->
           <div class="col-md-4 order-md-1 order-2">
             <!-- Cambio de orden -->
@@ -264,8 +258,8 @@
       </div>
 
       <!-- Jabiru-->
-      <div class="container py-5">
-        <div class="row align-items-center" data-aos="fade-right">
+      <div class="container py-5" data-aos="fade-right">
+        <div class="row align-items-center">
           <!-- Columna izquierda (Fotos) -->
           <div class="col-md-8">
             <div class="row g-3">
