--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- animaciones -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
     <!-- icono del sitio -->
     <link
       rel="icon"
@@ -25,14 +22,11 @@
     <!-- Style -->
     <link rel="stylesheet" href="../css/main.css" />
 
+    <!-- animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- js -->
     <script defer src="../js/menu-hamburgesa.js"></script>
-
-    <!-- Animaciones -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
 
     <title>Quienes Somos</title>
   </head>
@@ -98,19 +92,21 @@
           que un alojamiento: <br />un refugio creado por amantes de la
           naturaleza para quienes buscan conexión con lo esencial. <br />Cada
           detalle honra el frágil ecosistema que nos rodea .Hospitalidad
-          guaraní, Yayetopa (reencuentro), <br /> es nuestra filosofía de bienvenida Lo
-          que nos diferencia: <br />✔ Experiencias auténticas diseñadas por
-          naturalistas locales <br />✔ Arquitectura que dialoga con el paisaje
-          sin perturbarlo <br />✔ Compromiso con las comunidades del Iberá
-          <br />"No somos anfitriones, somos compañeros de aventura en este
-          rincón único del mundo, <br />donde el tiempo sigue el ritmo de la
-          naturaleza." Kuni, Fundadora y guardiana de este sueño.
+          guaraní, Yayetopa (reencuentro), <br />
+          es nuestra filosofía de bienvenida Lo que nos diferencia: <br />✔
+          Experiencias auténticas diseñadas por naturalistas locales <br />✔
+          Arquitectura que dialoga con el paisaje sin perturbarlo <br />✔
+          Compromiso con las comunidades del Iberá <br />"No somos anfitriones,
+          somos compañeros de aventura en este rincón único del mundo,
+          <br />donde el tiempo sigue el ritmo de la naturaleza." Kuni,
+          Fundadora y guardiana de este sueño.
         </p>
 
         <a
           href="https://wa.me/5493781491705?text=Hola%20Loreto%20Guest%20House,%20quisiera%20más%20información"
           target="_blank"
-          class="whatsapp-btn" data-aos="fade-up"
+          class="whatsapp-btn"
+          data-aos="fade-up"
         >
           <i class="fab fa-whatsapp"></i>
           <span>Consultas directas</span>
